updated class
