# swagger.json
@@ -272,7 +272,7 @@
         }
       }
     },
-    "/classes/{ClassId}": {
+    "/classes/{classId}": {
       "get": {
         "tags": [
           "classes"
@@ -283,7 +283,7 @@
         ],
         "parameters": [
           {
-            "name": "ClassId",
+            "name": "classId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -293,8 +293,11 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
